--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "sails": "^1.2.4",
+    "@sailshq/connect-redis": "^3.2.1",
+    "@sailshq/lodash": "^3.10.3",
+    "@sailshq/socket.io-redis": "^5.2.0",
     "argon2": "^0.27.0",
+    "datatables.net": "^1.10.21",
+    "datatables.net-dt": "^1.10.21",
     "grunt": "1.0.4",
+    "sails": "^1.2.4",
     "sails-hook-grunt": "^4.0.0",
     "sails-hook-orm": "^2.1.1",
-    "sails-hook-sockets": "^2.0.0",
-    "@sailshq/connect-redis": "^3.2.1",
-    "@sailshq/socket.io-redis": "^5.2.0",
-    "@sailshq/lodash": "^3.10.3"
+    "sails-hook-sockets": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "5.16.0"
+    "eslint": "5.16.0",
+    "jquery": "^3.5.1"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
